# AstroStack

./: .clang-format  .gitignore  CMakeLists.txt  README.md  astro_fr.ts  update_version.py
CMake/: Utilities.cmake  apple-clang.cmake  clang.cmake  gcc.cmake  intel-gcc.cmake  intel-msvc.cmake  msvc.cmake
installer/: AstroStack.iss
scripts/: builddoc.sh  makedist-mac.sh
src/: CMakeLists.txt  config.h.in
src/Algorithms/: CMakeLists.txt
src/Algorithms/Algos/: affinemodel.cpp  affinemodel.h  config.h  gradient_estimation.h  ransac.cpp  ransac.h
src/Algorithms/Algos/Filters/: ChromaticSmootherFilter.h  mergehslfilter.h  multifunctorimagefilter.h
src/Algorithms/Algos/Filters/Convertors/: HSL2RGB.h  RGB2HSL.h
src/Algorithms/Algos/Filters/Stackers/: count.h  max.h  median.h  robustmean.h  traits.h
src/Algorithms/Algos/Graph/: distance.cpp  distance.h  full_matching.cpp  full_matching.h  partial_matching.cpp  partial_matching.h
src/Algorithms/Algos/ImageStats/: center.cpp  center.h  image_statistics.h  mean.cpp  mean.h  minmax_position.cpp  minmax_position.h  size.cpp  size.h  traits.h
src/Algorithms/Algos/optim/: state.h
src/Algorithms/Algos/optim/LineSearch/: backtracking.h  damped.h  golden_section.h  simple.h
src/Algorithms/Algos/optim/criteria/: composite.h  criteria.h
src/Algorithms/Algos/optim/helper/: quadratic.h
src/Algorithms/Algos/optim/line_search/: backtracking.h  damped.h  golden_section.h  simple.h
src/Algorithms/Algos/optim/optimizer/: standard.h
src/Algorithms/Algos/optim/step/: conjugate_gradient.h  gradient.h  newton.h
src/Algorithms/Tests/: CMakeLists.txt  affinemodel.cpp  affinemodel.h  gradient_estimation.cpp  ransac.cpp
src/Algorithms/Tests/Filters/Convertors/: HSL2RGB.cpp  RGB2HSL.cpp
src/Algorithms/Tests/Filters/Stackers/: count.cpp  max.cpp  median.cpp  robustmean.cpp
src/Algorithms/Tests/Graph/: distance.cpp  full_matching.cpp  partial_matching.cpp
src/Algorithms/Tests/ImageStats/: center.cpp  image_statistics.cpp  mean.cpp  minmax_position.cpp  size.cpp
src/Algorithms/Tests/optim/: powell.cpp  powell.h  quadratic.cpp  quadratic.h  rosenbrock.cpp  rosenbrock.h  simple.h  state.cpp
src/Algorithms/Tests/optim/LineSearch/: backtracking.cpp  damped.cpp  golden_section.cpp  simple.cpp
src/Algorithms/Tests/optim/criteria/: composite.cpp  criteria.cpp
src/Algorithms/Tests/optim/helper/: quadratic.cpp
src/Algorithms/Tests/optim/line_search/: backtracking.cpp  damped.cpp  golden_section.cpp  simple.cpp
src/Algorithms/Tests/optim/optimizer/: standard.cpp
src/Algorithms/Tests/optim/step/: conjugate_gradient.cpp  gradient.cpp  newton.cpp
src/IO/: CMakeLists.txt  input.cpp  input.h  io.h  itkInput.cpp  itkInput.h  output.cpp  output.h
src/IO/IO/: config.h  hdf5.cpp  hdf5.h  input.cpp  input.h  io.cpp  io.h  itkinput.cpp  itkinput.h  itkoutput.cpp  itkoutput.h  output.cpp  output.h  traits.cpp  traits.h
src/IO/IO/tests/: hdf5suite.h
src/IO/Standalone/: CMakeLists.txt  read.cpp
src/IO/Tests/: CMakeLists.txt  hdf5.cpp  itk.cpp  read.cpp
src/ITKInputPlugin/: CMakeLists.txt  itkInput.cpp  itkInput.h
src/ITKPlugin/: CMakeLists.txt  itkInput.cpp  itkInput.h
src/Main/: CMakeLists.txt  config.h  explorer.cpp  explorer.h  explorer.ui  graphicsview.cpp  graphicsview.h  imagedata.cpp  imagedata.h  imagedata.ui  imagedisplay.cpp  imagedisplay.h  imagedisplay.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pluginfactory.cpp  pluginfactory.h
src/Main/Common/: doubleprogressbar.cpp  doubleprogressbar.h  doubleprogressbar.ui  graphicsview.cpp  graphicsview.h  imagedata.cpp  imagedata.h  imagedata.ui
src/Main/Explorer/: explorer.cpp  explorer.h  explorer.ui  imagedisplay.cpp  imagedisplay.h  imagedisplay.ui
src/Main/HistoAdjust/: histoadjust.cpp  histoadjust.h  histoadjust.ui
src/Main/Mono2MonoProcessing/: mono2monoprocessing.cpp  mono2monoprocessing.h  mono2monoprocessing.ui  mono2monoworkflow.cpp  mono2monoworkflow.h
src/Main/MonoProcessing/: monoprocessing.cpp  monoprocessing.h  monoprocessing.ui  monoworkflow.cpp  monoworkflow.h
src/Main/Multi2MonoProcessing/: multi2monoprocessing.cpp  multi2monoprocessing.ui  multi2monoworkflow.cpp  multi2monoworkflow.h
src/Main/Multi2MultiProcessing/: multi2multiprocessing.cpp  multi2multiprocessing.h  multi2multiprocessing.ui  multi2multiworkflow.cpp  multi2multiworkflow.h
src/Main/MultiProcessing/: multiprocessing.cpp  multiprocessing.h  multiworkflow.cpp  multiworkflow.h
src/Plugin/: CMakeLists.txt
src/Plugin/Plugin/: config.h  pluginfactory.cpp  pluginfactory.h
src/Processing/: CMakeLists.txt
src/Processing/Processing/: chromasmoothing.cpp  chromasmoothing.h  chromasmoothing.md  chromasmoothing.ui  config.h  exponential.cpp  exponential.h  exponential.md  exponential.ui  graphmatching.cpp  graphmatching.h  grey.cpp  grey.h  histostretch.cpp  histostretch.h  histostretch.md  histostretch.ui  lightpollution.cpp  lightpollution.h  maxstacking.cpp  maxstacking.h  mono.cpp  mono.h  mono.ui  monointerface.cpp  monointerface.h  register.cpp  register.h  rldeconvolution.cpp  rldeconvolution.h  rldeconvolution.md  rldeconvolution.ui  stacking.cpp  stacking.h  stardetection.cpp  stardetection.h  ui_mono.h  ui_monointerface.h
src/Processing/Standalone/: CMakeLists.txt  chromasmoothing.cpp  deconvolution.cpp  exponential.cpp  graphmatching.cpp  grey.cpp  histostretch.cpp  lightpollution.cpp  read.cpp  register.cpp  rldeconvolution.cpp  stacking.cpp  stardetection.cpp
src/Processing/Tests/: CMakeLists.txt  chromasmoothing.cpp  exponential.cpp  grey.cpp  histostretch.cpp  register.cpp
src/QtIO/: CMakeLists.txt
src/QtIO/QtIO/: config.h  input.cpp  input.h  itkinput.cpp  itkinput.h  itkoutput.cpp  itkoutput.h  output.cpp  output.h
src/QtProcessing/: CMakeLists.txt
translations/: CMakeLists.txt  astro_fr.ts
workflows/: CMakeLists.txt  Cleanup.json  Cleanup.md  Deconvolve.json  Deconvolve.md  DeepSkyStacking.json  DeepSkyStacking.md  HistoStretch.json  HistoStretch.md  HistogramStretch.json  HistogramStretch.md  MaxStacking.json  MaxStacking.md
(+67 files in other folders)
